syntax = "proto3";
package user;

service UserService {
  rpc GetUser (UserQueryRequest) returns (UserDTO);
  rpc GetActiveUsers (Empty) returns (UserListResponse);
  rpc LoginUser (LoginRequest) returns (AuthResponse);
  rpc RegisterUser (RegisterRequest) returns (AuthResponse);
  rpc SetUserStatus (StatusRequest) returns (StatusResponse);
}

message Empty {}

message UserQueryRequest {
  string token = 1;
  string email = 2;
  string id = 3;
}

message UserDTO {
  string id = 1;
  string email = 2;
  string firstName = 3;
  string lastName = 4;
  string displayName = 5;
  string avatar = 6;
  string createDate = 7;
  string updateDate = 8;
  bool isActive = 9;
}

message UserListResponse {
  repeated UserDTO users = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string firstName = 3;
  string lastName = 4;
  string displayName = 5;
  string avatar = 6;
}

message AuthResponse {
  UserDTO user = 1;
  string token = 2;
}

message StatusRequest {
  string email = 1;
  bool isActive = 2;
}

message StatusResponse {
  bool success = 1;
}
